Assignment-02 Dating Form

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
               >Go To</a
             >
           </li>
+
+          <li>
+            Assignment-2 (Dating Qulification Form)
+            <a
+              href="Daily Assignments/Assignment-02/datingForm.html"
+              target="_blank"
+              >Go To</a
+            >
+          </li>
         </ul>
       </details>
     </div>
